language/move-prover/tests/sources/functional/global_vars.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold

     ┌── tests/sources/functional/global_vars.move:118:9 ───
     │
 118 │         ensures sum_of_T == old(sum_of_T) + 2;
     │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/functional/global_vars.move:109:5: combi_incorrect
     =         r = <redacted>,
     =         s = <redacted>,
     =         result = <redacted>
     =     at tests/sources/functional/global_vars.move:111:17: combi_incorrect
     =     at tests/sources/functional/global_vars.move:112:17: combi_incorrect
     =     at tests/sources/functional/global_vars.move:113:9: combi_incorrect
     =     at tests/sources/functional/global_vars.move:115:9: combi_incorrect

error: post-condition does not hold

    ┌── tests/sources/functional/global_vars.move:33:9 ───
    │
 33 │         ensures sum_of_T == old(sum_of_T) + 1;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_vars.move:29:5: pack_incorrect
    =         result = <redacted>
    =     at tests/sources/functional/global_vars.move:30:9: pack_incorrect

error: post-condition does not hold

    ┌── tests/sources/functional/global_vars.move:56:9 ───
    │
 56 │         ensures sum_of_T == old(sum_of_T);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_vars.move:51:5: unpack_incorrect
    =         t = <redacted>,
    =         x = <redacted>,
    =         result = <redacted>
    =     at tests/sources/functional/global_vars.move:52:13: unpack_incorrect
    =     at tests/sources/functional/global_vars.move:53:9: unpack_incorrect

error: post-condition does not hold

     ┌── tests/sources/functional/global_vars.move:153:9 ───
     │
 153 │         ensures sum_of_S == old(sum_of_S) + 1;
     │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/functional/global_vars.move:146:5: update_S_incorrect
     =         r = <redacted>,
     =         s = <redacted>,
     =         result = <redacted>
     =     at tests/sources/functional/global_vars.move:147:17: update_S_incorrect
     =     at tests/sources/functional/global_vars.move:148:17: update_S_incorrect
     =     at tests/sources/functional/global_vars.move:149:9: update_S_incorrect
     =     at tests/sources/functional/global_vars.move:150:9: update_S_incorrect

error: post-condition does not hold

    ┌── tests/sources/functional/global_vars.move:89:9 ───
    │
 89 │         ensures sum_of_T == old(sum_of_T);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_vars.move:82:5: update_incorrect
    =         t = <redacted>,
    =         result = <redacted>
    =     at tests/sources/functional/global_vars.move:83:17: update_incorrect
    =     at tests/sources/functional/global_vars.move:84:37: update_incorrect
    =     at tests/sources/functional/global_vars.move:64:5: update_valid_still_mutating
    =         t = <redacted>,
    =         result = <redacted>
    =     at tests/sources/functional/global_vars.move:65:19: update_valid_still_mutating
    =     at tests/sources/functional/global_vars.move:64:9: update_valid_still_mutating
    =     at tests/sources/functional/global_vars.move:85:9: update_incorrect
